--- a/wenjuan123/404.html
+++ b/wenjuan123/404.html
@@ -12,8 +12,8 @@
 
 <body>
     <div class="top">
-        <img class="logo" src="./img/Franklin3" alt="Franklin3">
-        <img class="webname" src="./img/web" alt="网站名">
+        <img class="logo" src="./img/Franklin3.ico" alt="Franklin3">
+        <img class="webname" src="./img/web.png" alt="网站名">
     </div>
     <div class="content">
         <p class="p404">404!!!</p>
@@ -21,7 +21,7 @@
     </div>
     <div class="bottom">
         鸣谢:
-        <img src="./img/l_o_o_k.ico" alt="l_o_o_k" style="width: 20px;">友情提供前端代码<br>
+        <img src="./img/l_o_o_k.ico" alt="l_o_o_k" style="width: 20px;">友情提供临时前端代码<br>
         Copyright © 2021 备案号:
         <!-- target="_blank"-->
         <a href="javascript:void(0)">暂无备案</a>
